# usb-state-notifier

./: CMakeLists.txt  main.cpp  usb-state.service  usb-state.spec
rpm/: usb-state.spec
